--- a/css/set1.css
+++ b/css/set1.css
@@ -444,7 +444,7 @@ figure.effect-romeo:hover p {
 /*---------------*/
 
 figure.effect-layla {
-	background: #001e1F;
+	background: #50586C;
 }
 
 figure.effect-layla img {
