--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,7 @@ body {
   background-color: rgb(47, 139, 198);
   font-size: 1em;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 ._button-7 {
@@ -200,7 +200,7 @@ body {
   background-color: rgb(47, 139, 198);
   font-size: 1em;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 ._button-8 {
@@ -214,7 +214,7 @@ body {
   background-color: rgb(47, 139, 198);
   font-size: 1em;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 ._button-9 {
@@ -228,7 +228,7 @@ body {
   background-color: rgb(47, 139, 198);
   font-size: 1em;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 .text em {
